@@ -1,3 +1,8 @@
+2011-12-21  Jason Merrill  <jason@redhat.com>
+
+	PR c++/51611
+	* g++.dg/cpp0x/nsdmi-virtual1.C: New.
+
 2011-12-21  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/51305
